<resources>
    <string name="app_name">PiRoverApp</string>
    <string name="app_title">PiRover</string>
    <string name="title_activity_login">Sign in</string>
    <string name="app_titleMenu">Options Control</string>

    <!-- LoginActivity -->
    <string name="set_message">Login Failed.</string>
    <string name="set_negative">Retry</string>

    <!-- NavigationDrawer -->
    <string name="Nav_set_message">Are you logging out?</string>
    <string name="Nav_set_negative">N0</string>
    <string name="Nav_set_positive">Yes</string>

    <!-- NavigationDrawer -->
    <string name="Reg_Activity_set_message">Registration Failed.</string>
    <string name="Reg_Activity_set_reason">Registration Failed. Passwords Do Not Match.</string>

    <!-- Strings related to login -->

    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="register">Register Here</string>
    <string name="guestLogin">Login as guest</string>
    <string name="back">Back</string>
    <string name="auto">Automatic</string>
    <string name="manual">Manual</string>

    <string name="connect">Connect</string>
    <string name="trying">Attempting Connection...</string>
    <string name="notestablished">Attempt Failed</string>
    <string name="connected">Connection Established</string>
    <string name="bluetoothelse">Go to settings and enable Bluetooth</string>
    <string name="disconnect"> Disconnect </string>
    <string name="stop">Stop</string>
    <string name="closing">Closing connection...</string>
    <string name="noconnection">No connection found</string>

    <string name="m_forward">Moving: Forward</string>
    <string name="m_reverse">Moving: Reverse</string>
    <string name="m_left">Moving: Left</string>
    <string name="m_right">Moving: Right</string>


    <string name="register_name">Enter your full name</string>
    <string name="register_user">Enter your username</string>
    <string name="register_pass">Enter your password</string>
    <string name="register_serial">Choose a port ID</string>
    <string name="register_confirmpass">Confirm password</string>
    <string name="register_registerbutton">Register</string>

    <string name="register_serialButton1">00001101-0000-1000-8000-00805f9b34fb</string>
    <string name="register_serialButton2">00001101-0000-1000-8000-12345test</string>


    <string name="login_user">Username</string>
    <string name="login_password">Password</string>
    <string name="login_title">TestTitle</string>

    <!-- Splash Names -->
    <string name="splash_teamName">Pi NIVEA PRODUCTIONS</string>
    <string name="splash_dev">DEVELOPERS: </string>
    <string name="splash_chris">CHRISTOPHER ALBARILLO</string>
    <string name="splash_law">LAWRENCE PUIG</string>
    <string name="splash_iff">IFRAH WORSEMA</string>
    <string name="splash_hak">PATRICK NG</string>

    <string name="menu_welcome">WELCOME</string>
    <string name="menu_serial">SERIAL ID:</string>
    <string name="guest_name">Guest</string>

    <!-- AutoControl -->
    <string name="startButton">AutoMap</string>
    <string name="stopButton">Stop</string>
    <string name="auto_saveDataButton">SAVE DATA</string>
    <string name="auto_dataTitle">Number of obstacles</string>

    <!-- Manual Activity -->
    <string name="PiRovers">PiRover</string>

    <!-- Commands -->
    <string name="forward">w</string>
    <string name="reverse">s</string>
    <string name="left">a</string>
    <string name="right">d</string>
    <string name="startAuto">automap</string>
    <string name="stopAuto">stop</string>
    <string name="raspberrypiID">raspberrypi</string>

    <!-- FloatFunctions -->
    <string name="site_chris">Visit Chris\' GitHub</string>
    <string name="site_lawrence">Visit Lawrence\'s Github</string>
    <string name="site_heakeme">Visit Heakeme\'s Github</string>
    <string name="devs">Developers</string>

    <string name="color_green">GREEN</string>
    <string name="color_yellow">YELLOW</string>
    <string name="color_blue">BLUE</string>
    <string name="title_activity_navigation_drawer">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="AboutTextView">About</string>
    <string name="drawerContent">drawerContent</string>

    <string name="action_call">Call Chris</string>
    <string name="pirover">PiRover</string>
    <string name="about">About</string>
    <string name="developers">Developers</string>
    <string name="more">More</string>
    <string name="menuAbout">This is a prototype project that is inspired by NASA’s own rover. It can be used for research purposes due to its small body and mobile features. In the future we hope to create an even smaller type rover that will be just as mobile, but will also have new features such as; gathering raw materials and even being fully automatic. This prototype will have three different on settings; automatic, manual and a pattern mode for testing. It will run off of a Raspberry Pi database that includes pre-registered codes and will be activated via Bluetooth from a mobile device software.</string>
    <string name="menuDevelopers">Chris Albarillo \n Lawrence Puig \n Patrick Ng </string>
    <string name="menuMore">Extras: </string>

    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_message">Are you sure you want to exit?</string>

    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Settings</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">SETTINGS</string>
    <string name="settings_brightTitle">Adjust Screen Brightness</string>

    <string name="audio_pref">audio</string>
    <string name="audio_stringpref">SOUND</string>
    <string name="audio_name">audioMusic</string>
    <string name="audio_check">CHECKED</string>
    <string name="audio_unchecked">UNCHECKED</string>


    <string name="frag_blue">Blue</string>
    <string name="frag_green">Green</string>
    <string name="frag_yellow">Yellow</string>
    <string name="settings_colorRadio">Change Setting\'\s Background Color</string>
    <string name="settings_saveButton">SAVE</string>
    <string name="settings_brightnessProg">bright</string>
    <string name="frag_toggleOn">Mute/Vibrate ON</string>
    <string name="frag_toggleOff">Mute/Vibrate OFF</string>
    <string name="settings_audioTitle">Mute/Vibrate toggle</string>

    <string name="bright_name">bright</string>
    <string name="bright_pref">brightnessPref</string>
    <string name="bright_stringpref">HIGH</string>
    <string name="frag_saveToast">Settings Saved</string>


    <string name="intent_putName">name1</string>
    <string name="intent_putContent">content</string>
    <string name="intent_putUsername">username</string>
    <string name="intent_putSuccess">success</string>

    <string name="login_requestURL">"http://thebarebarzz.xyz/LoginPi.php"</string>

    <string name="main_urlChris">"https://github.com/chris0707"</string>
    <string name="main_urlLaw">"https://github.com/n01033296"</string>
    <string name="main_urlHeakeme">"https://github.com/TheKeme"</string>

    <string name="drawer_Home">Home</string>
    <string name="drawer_Settings">Settings</string>

    <string name="toast_autoMap">Device not yet connected. Please connect</string>
    <string name="toast_autoStop">No connection available.</string>
    <string name="set_title">Logout</string>
    <string name="menu_name">Sample Name</string>


</resources>
