<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/autocheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auto" />

        <Button
            android:id="@+id/manualcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/manual" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:paddingBottom="@dimen/activity_horizontal_margin"

            android:paddingRight="@dimen/activity_horizontal_margin"
            fab:fab_colorNormal="#DA4336"
            fab:fab_colorPressed="#E75043"
            fab:fab_colorRipple="#99FFFFFF"
            fab:fab_shadowColor="#66000000"
            fab:fab_showShadow="true"
            fab:menu_fab_label="@string/devs"
            fab:menu_labels_colorNormal="#333333"
            fab:menu_labels_colorPressed="#444444"
            fab:menu_labels_colorRipple="#66FFFFFF"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_position="left"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="true"
            fab:menu_openDirection="up">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_dialog_info"
                fab:fab_label="@string/site_chris"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_dialog_info"
                fab:fab_label="@string/site_lawrence"
                fab:fab_size="mini" />


        </com.github.clans.fab.FloatingActionMenu>

    </LinearLayout>

</RelativeLayout>