<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.piroverapp.LoginActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@drawable/background3">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/login"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/exitButton"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/exit"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="66dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_user"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/etPass"
        android:layout_marginStart="14dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintRight_toRightOf="@+id/etUser"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="74dp"
        app:layout_constraintLeft_toLeftOf="@+id/etUser" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etPass"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etPass" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="310dp"
        android:layout_height="196dp"
        app:srcCompat="@drawable/mainlogo"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/etUser"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
