<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.piroverapp.RegisterActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@drawable/background3">

    <EditText
        android:id="@+id/editName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="47dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editUser"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_user"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editName"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editName" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/register_pass"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editUser"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/editUser"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editUser" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="Register"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="61dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/serialidButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_serial"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="169dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="170dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editPassword" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="4dp"
        app:layout_constraintRight_toRightOf="@+id/textView6"
        android:layout_marginBottom="171dp">

        <RadioButton
            android:id="@+id/serialRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/register_serialButton1" />

        <RadioButton
            android:id="@+id/serialRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/register_serialButton2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:text=""
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
